--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+          </div> 
+    </nav>
+    <h1>Hello World</h1>
 </body>
 </html>
