--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
 </head>
 <body>
     <nav>
-        <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
-          </div> 
+        <input type="checkbox" id="chack">
+        <label for="chack" class="chackbtn">
+            <i class="fas fa-bars"></i>
+     
+        </label>
+        <label class="logo">Sharada Marasinha</label>
+        <ul>
+            <li><a class="active" href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Feedback</a></li>
+        </ul>
     </nav>
-    <h1>Hello World</h1>
+
+    <section></section>
+    <script src="https://kit.fontawesome.com/d9d0e39ac6.js" crossorigin="anonymous"></script>
 </body>
 </html>
