--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <nav>
-        <input type="checkbox" id="chack">
-        <label for="chack" class="chackbtn">
-            <i class="fas fa-bars"></i>
-     
-        </label>
-        <label class="logo">Sharada Marasinha</label>
-        <ul>
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Feedback</a></li>
-        </ul>
-    </nav>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <nav>
+            <input type="checkbox" id="chack">
+            <label for="chack" class="chackbtn">
+                <i class="fas fa-bars"></i>
 
-    <section></section>
-    <script src="https://kit.fontawesome.com/d9d0e39ac6.js" crossorigin="anonymous"></script>
-</body>
+            </label>
+            <label class="logo">
+                Sharada Marasinha
+                <img width="12" src="img/white.PNG" alt>
+            </label>
+
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Feedback</a></li>
+            </ul>
+        </nav>
+
+        <section>
+            
+        </section>
+        <script src="https://kit.fontawesome.com/d9d0e39ac6.js"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
