--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <title>Document</title>
+        <title>♠ | sharada marasinha | ♣</title>
     </head>
     <body>
         <nav>
@@ -28,7 +28,7 @@
         </nav>
 
         <section>
-            
+
         </section>
         <script src="https://kit.fontawesome.com/d9d0e39ac6.js"
             crossorigin="anonymous"></script>
