add second section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,29 @@
         </nav>
 
         <section>
+            <img width="300" id="propic" src="img/3Untitled-1.png" alt>
 
+            <div class="bio">
+                <h1>I'm Sharada </h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Totam inventore magnam sint neque natus reprehenderit
+                    voluptatem dolor et, temporibus provident amet debitis
+                    deserunt laudantium similique voluptas minima beatae ab
+                    eos.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Voluptate totam fugiat aperiam, dolor ducimus voluptatem
+                    asperiores consectetur in quas officiis nihil id eaque, amet
+                    nemo praesentium vitae, recusandae provident ad.</p>
+            </div>
+        </section>
+        <section>
+            <div class="cardContainner">
+                <div class="card">
+                    <img src="#" alt="">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dignissimos blanditiis in non ea quibusdam doloribus! Consectetur hic illum nam aut, provident enim architecto quaerat iste quis iusto, tenetur amet.</p>
+                    <input type="button" value="More">
+                </div>
+            </div>
         </section>
         <script src="https://kit.fontawesome.com/d9d0e39ac6.js"
             crossorigin="anonymous"></script>
