--- a/index.html
+++ b/index.html
@@ -45,10 +45,22 @@
         <section>
             <div class="cardContainner">
                 <div class="card">
-                    <img src="#" alt="">
+                    <img src="img/cardIMG01.jpg" alt="">
                     <h3>Title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dignissimos blanditiis in non ea quibusdam doloribus! Consectetur hic illum nam aut, provident enim architecto quaerat iste quis iusto, tenetur amet.</p>
-                    <input type="button" value="More">
+                    <input id="cardButton" type="button" value="More">
+                </div>
+                <div class="card">
+                    <img src="img/cardIMG01.jpg" alt="">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dignissimos blanditiis in non ea quibusdam doloribus! Consectetur hic illum nam aut, provident enim architecto quaerat iste quis iusto, tenetur amet.</p>
+                    <input id="cardButton" type="button" value="More">
+                </div>
+                <div class="card">
+                    <img src="img/cardIMG01.jpg" alt="">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dignissimos blanditiis in non ea quibusdam doloribus! Consectetur hic illum nam aut, provident enim architecto quaerat iste quis iusto, tenetur amet.</p>
+                    <input id="cardButton" type="button" value="More">
                 </div>
             </div>
         </section>
