add new container

--- a/index.html
+++ b/index.html
@@ -73,7 +73,19 @@
                 </div>
             </div>
 
-            <div class="">ewf</div>
+            <div class="secondContainer">
+                <div class="secondCoDiv1">
+                    <img src="img/childVr.jpg" alt="" width="50%" style="border-radius: 10px;">
+                </div>
+                <div class="secondCoDiv2">
+                    <h1>Helloo</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae assumenda ea cum exercitationem esse? Veritatis id, consectetur velit officiis numquam, eius veniam, sit eum dicta eos illo dolores nisi accusantium.
+                    Numquam cum explicabo voluptas dolorem repellendus qui veritatis facilis a sed animi vel, culpa, saepe itaque expedita ex fuga ea mollitia cupiditate exercitationem unde consequuntur et laborum? Nisi, animi laboriosam.
+                    Incidunt cumque eaque obcaecati praesentium enim earum. Illum praesentium, eos veritatis corrupti cupiditate facilis officia nihil sint voluptates suscipit tempora, sed doloribus a impedit saepe dolor? Provident accusantium voluptatum blanditiis?
+                    Reiciendis nisi eligendi modi temporibus harum molestiae doloribus nemo! Deleniti, suscipit quia? Debitis, eaque, eius dolor totam dolore quaerat quidem ducimus quibusdam accusamus quis fuga? Animi laudantium iusto sunt voluptatibus.
+                    Mollitia ab deleniti aut incidunt ad assumenda dicta eos nemo beatae modi, impedit, cumque, facilis eum autem labore. Tempore, fugit doloribus. Voluptatem pariatur quod, facere nobis atque accusamus praesentium aliquid!</p>
+                </div>
+            </div>
     
         <script src="https://kit.fontawesome.com/d9d0e39ac6.js"
             crossorigin="anonymous"></script>
