--- a/index.html
+++ b/index.html
@@ -28,28 +28,37 @@
             <li><a href="#">Feedback</a></li>
         </ul>
     </nav>
+    <hgroup>
+        <div class="bio">
+            <table width="100%">
+                <tr>
+                    <td><img width="300" id="propic" src="img/3Untitled-1.png" alt="proimg"></td>
+                    <td>
+                        <dl>
+                            <dt>
+                                <h1>Hello.. I'm Sharadha Marasinghe</h1>
+                            </dt>
+                            <dd>
+                                <p>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                    Totam inventore magnam sint neque natus reprehenderit
+                                    voluptatem dolor et, temporibus provident amet debitis
+                                    deserunt laudantium similique voluptas minima beatae ab
+                                    eos.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Voluptate totam fugiat aperiam, dolor ducimus voluptatem
+                                    asperiores consectetur in quas officiis nihil id eaque, amet
+                                    nemo praesentium vitae, recusandae provident ad.
+                                </p>
+                            </dd>
+                        </dl>
+                    </td>
+                </tr>
+            </table>
 
 
 
-    <div class="bio">
-        <img width="300" id="propic" src="img/3Untitled-1.png" alt>
-        <h1 style="">I'm Sharada </h1>
-        <p>
-
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Totam inventore magnam sint neque natus reprehenderit
-            voluptatem dolor et, temporibus provident amet debitis
-            deserunt laudantium similique voluptas minima beatae ab
-            eos.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Voluptate totam fugiat aperiam, dolor ducimus voluptatem
-            asperiores consectetur in quas officiis nihil id eaque, amet
-            nemo praesentium vitae, recusandae provident ad.</p>
-    </div>
-
-    <section class="container">
-
-    </section>
-
+        </div>
+    </hgroup>
     <div class="cardContainner">
         <div class="card">
             <img src="img/cardIMG01.jpg" width="100" alt="">
@@ -88,32 +97,58 @@
             <input id="cardButton" type="button" value="More">
         </div>
     </div>
+    <table class="secondContainer" cellspacing="120">
+        <tr>
+            <td>
+                <img src="img/childVr.jpg" alt="" width="50%" style="border-radius: 10px;">
+            </td>
+            <td>
+                <dl>
+                    <dt>
+                        <h1>Helloo</h1>
+                    </dt>
+                    <dd>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae assumenda ea cum
+                            exercitationem esse?
+                            Veritatis id, consectetur velit officiis numquam, eius veniam, sit eum dicta eos illo
+                            dolores nisi
+                            accusantium.
+                            Numquam cum explicabo voluptas dolorem repellendus qui veritatis facilis a sed animi
+                            vel, culpa, saepe
+                            itaque expedita ex fuga ea mollitia cupiditate exercitationem unde consequuntur et
+                            laborum? Nisi, animi
+                            laboriosam.
+                            Incidunt cumque eaque obcaecati praesentium enim earum. Illum praesentium, eos veritatis
+                            corrupti
+                            cupiditate facilis officia nihil sint voluptates suscipit tempora, sed doloribus a
+                            impedit saepe dolor?
+                            Provident accusantium voluptatum blanditiis?
+                            Reiciendis nisi eligendi modi temporibus harum molestiae doloribus nemo! Deleniti,
+                            suscipit quia?
+                            Debitis, eaque, eius dolor totam dolore quaerat quidem ducimus quibusdam accusamus quis
+                            fuga? Animi
+                            laudantium iusto sunt voluptatibus.
+                            Mollitia ab deleniti aut incidunt ad assumenda dicta eos nemo beatae modi, impedit,
+                            cumque, facilis eum
+                            autem labore. Tempore, fugit doloribus. Voluptatem pariatur quod, facere nobis atque
+                            accusamus
+                            praesentium aliquid!</p>
+                    </dd>
+                </dl>
 
-    <div class="secondContainer">
-        <div class="secondCoDiv1">
-            <img src="img/childVr.jpg" alt="" width="50%" style="border-radius: 10px;">
-        </div>
-        <div class="secondCoDiv2">
-            <h1>Helloo</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae assumenda ea cum exercitationem esse?
-                Veritatis id, consectetur velit officiis numquam, eius veniam, sit eum dicta eos illo dolores nisi
-                accusantium.
-                Numquam cum explicabo voluptas dolorem repellendus qui veritatis facilis a sed animi vel, culpa, saepe
-                itaque expedita ex fuga ea mollitia cupiditate exercitationem unde consequuntur et laborum? Nisi, animi
-                laboriosam.
-                Incidunt cumque eaque obcaecati praesentium enim earum. Illum praesentium, eos veritatis corrupti
-                cupiditate facilis officia nihil sint voluptates suscipit tempora, sed doloribus a impedit saepe dolor?
-                Provident accusantium voluptatum blanditiis?
-                Reiciendis nisi eligendi modi temporibus harum molestiae doloribus nemo! Deleniti, suscipit quia?
-                Debitis, eaque, eius dolor totam dolore quaerat quidem ducimus quibusdam accusamus quis fuga? Animi
-                laudantium iusto sunt voluptatibus.
-                Mollitia ab deleniti aut incidunt ad assumenda dicta eos nemo beatae modi, impedit, cumque, facilis eum
-                autem labore. Tempore, fugit doloribus. Voluptatem pariatur quod, facere nobis atque accusamus
-                praesentium aliquid!</p>
-        </div>
+
+            </td>
+        </tr>
+    </table>
+        
+
+
+
+
+
+
     </div>
     <div class="container3">
-        <div class="conDiv13">
             <table id="table">
                 <tr>
                     <th>Company</th>
@@ -171,8 +206,6 @@
                     <td>France</td>
                 </tr>
             </table>
-        </div>
-        <div class="conDiv23">
             <table id="table">
                 <tr>
                     <th>Company</th>
@@ -230,19 +263,19 @@
                     <td>France</td>
                 </tr>
             </table>
-        </div>
+    
     </div>
 
-<table width="100%">
-    <tr>
-        <td>dsf</td>
-        <td>dsf</td>
-    </tr>
-    <tr>
-        <td>dsf</td>
-        <td>dsf</td>
-    </tr>
-</table>
+    <table width="100%">
+        <tr>
+            <td>dsf</td>
+            <td>dsf</td>
+        </tr>
+        <tr>
+            <td>dsf</td>
+            <td>dsf</td>
+        </tr>
+    </table>
     <script src="https://kit.fontawesome.com/d9d0e39ac6.js" crossorigin="anonymous"></script>
 </body>
 
