--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
                             accusamus
                             praesentium aliquid!</p>
                     </dd>
+                    <dd>
+                        <details>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate ipsam beatae labore rem delectus omnis error, deleniti ratione tenetur nisi assumenda modi quae, quibusdam animi, similique pariatur. Earum, dolor adipisci.</p>
+                        </details>
+                        <details>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate ipsam beatae labore rem delectus omnis error, deleniti ratione tenetur nisi assumenda modi quae, quibusdam animi, similique pariatur. Earum, dolor adipisci.</p>
+                        </details>
+                        <details>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate ipsam beatae labore rem delectus omnis error, deleniti ratione tenetur nisi assumenda modi quae, quibusdam animi, similique pariatur. Earum, dolor adipisci.</p>
+                        </details>
+                    </dd>
                 </dl>
 
 
@@ -263,20 +274,31 @@
                     <td>France</td>
                 </tr>
             </table>
-    
     </div>
 
-    <table width="100%">
+
+    <table width="100%" id="footer" cellpadding="100">
         <tr>
             <td>dsf</td>
             <td>dsf</td>
         </tr>
         <tr>
-            <td>dsf</td>
-            <td>dsf</td>
+            <td style="line-height: 50px;">
+                <address>sharadamarasinha@gmail.com</address>
+                <address>+9477-9911-825</address>
+                <address>colombo,srilanka</address>
+            </td>
+            <td style="text-align: left;">
+                <dl>
+                    <dt><h2>Contact Me</h2></dt>
+                    <dd><input type="email" placeholder="sample@email.com" style="width: 50%;"></dd>
+                    <dd>
+                        <textarea name="" id="" rows="10" cols="50%"></textarea>
+                    </dd>
+                </dl>
+                <h1></h1>
+            </td>
         </tr>
     </table>
-    <script src="https://kit.fontawesome.com/d9d0e39ac6.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
