add cotact form

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <address>+9477-9911-825</address>
                 <address>colombo,srilanka</address>
             </td>
-            <td style="text-align: left;">
+            <td style="text-align: left; display: flex; align-items: center; justify-content: center;">
                 <dl>
                     <dt><h2>Contact Me</h2></dt>
                     <dd><input type="email" placeholder="sample@email.com" style="width: 50%;"></dd>
