creat a projecct section

--- a/index.html
+++ b/index.html
@@ -424,60 +424,90 @@
     </div>
 
     <div class=" container  p-3 bg-body rounded shadow-sm">
-        <h6 class="border-bottom pb-2 mb-0">Projects</h6>
+        <h2 class="border-bottom pb-2 mb-0">Projects</h2>
         <div class="d-flex text-body-secondary pt-3">
-            <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
-                    dy=".3em">32x32</text>
-            </svg>
+            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
             <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Full Name</strong>
-                    <a href="#">Follow</a>
+                    <strong class="text-gray-dark">Exam Platform</strong>
+                    <a href="#">View Project Repository</a>
                 </div>
-                <span class="d-block">@username</span>
+                <span class="d-block p-3">@username</span>
             </div>
         </div>
         <div class="d-flex text-body-secondary pt-3">
-            <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
-                    dy=".3em">32x32</text>
-            </svg>
+            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
             <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Full Name</strong>
-                    <a href="#">Follow</a>
+                    <strong class="text-gray-dark">Library-Management System</strong>
+                    <a href="#">View Project Repository</a>
                 </div>
-                <span class="d-block">@username</span>
+                <span class="d-block p-3">@username</span>
             </div>
         </div>
         <div class="d-flex text-body-secondary pt-3">
-            <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
-                    dy=".3em">32x32</text>
-            </svg>
+            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
             <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Full Name</strong>
-                    <a href="#">Follow</a>
+                    <strong class="text-gray-dark">Real-Time Weather Web Application</strong>
+                    <a href="#">View Project Repository</a>
                 </div>
-                <span class="d-block">@username</span>
+                <span class="d-block p-3 ">A lightweight and responsive weather application built with HTML, CSS, and
+                    JavaScript. Stay updated on current weather conditions worldwide. Includes a user-friendly
+                    interface, location search, and real-time weather data integration using a weather API.</span>
+            </div>
+        </div>
+        <div class="d-flex text-body-secondary pt-3">
+            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                <div class="d-flex justify-content-between">
+                    <strong class="text-gray-dark">Quiz_App_Mobile</strong>
+                    <a href="#">View Project Repository</a>
+                </div>
+                <span class="d-block p-3">@username</span>
+            </div>
+        </div>
+        <div class="d-flex text-body-secondary pt-3">
+            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                <div class="d-flex justify-content-between">
+                    <strong class="text-gray-dark">e-commerce Web Application </strong>
+                    <a href="#">View Project Repository</a>
+                </div>
+                <span class="d-block p-3">Led a software development team to create an advanced e-commerce website using
+                    Angular, Bootstrap, and Spring Boot. Utilized Agile methodologies for effective project management
+                    and GitHub for version control.</span>
+            </div>
+        </div>
+        <div class="d-flex text-body-secondary pt-3">
+            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                <div class="d-flex justify-content-between">
+                    <strong class="text-gray-dark">Student Management System UNI</strong>
+                    <a href="#">View Project Repository</a>
+                </div>
+                <span class="d-block p-3">A web-based Student Information Management System was created using Spring
+                    Boot, Lombok, Spring Data, MySQL,Layade, and Fetch API,JavaScript, HTML, CSS to manage student data
+                    efficiently.</span>
+            </div>
+        </div>
+        <div class="d-flex text-body-secondary pt-3">
+            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                <div class="d-flex justify-content-between">
+                    <strong class="text-gray-dark">roller_dice_mobile_game</strong>
+                    <a href="#">View Project Repository</a>
+                </div>
+                <span class="d-block p-3">A mobile game for Flutter that simulates rolling dice on your device. To roll
+                    the dice and see lifelike animations, shake or tap. Easy to learn, entertaining, and ideal for short
+                    games.</span>
             </div>
         </div>
         <small class="d-block text-end mt-3">
             <a href="#">All suggestions</a>
         </small>
     </div>
-
+    <!-- Contact From -->
     <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="row align-items-center g-lg-5 py-5">
             <div class="col-lg-7 text-center text-lg-start">
