chnage detail tab

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contact Me</a></li>
             </ul>
         </header>
     </div>
@@ -238,8 +238,8 @@
 
     <div class="container-fluid   px-5 py-5" id="icon-grid">
         <h2 class="pb-2 border-bottom">Core Languages</h2>
-        <details>
-            <dl>
+        <details class="bg-dark-subtle  p-4">
+            <dl >
                 <dt>What is a core language?</dt>
                 <dd>Core language is a term used to describe a variety of words/vocabulary that comprises more than
                     70-90% of the words that we use on a daily basis. Core vocabulary is extremely powerful in the sense
@@ -338,7 +338,7 @@
     <div class="container-fluid  px-5 py-5" id="icon-grid">
         <h2 class="pb-2 border-bottom">Frameworks & libraries</h2>
 
-        <details>
+        <details class="bg-dark-subtle  p-4">
             <dl>
                 <dt>What are frameworks and libraries?</dt>
                 <dd>Libraries provide developers with predefined functions and classes to make their work easier and
@@ -450,11 +450,13 @@
             <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
                     <strong class="text-gray-dark">Real-Time Weather Web Application</strong>
-                    <a href="#">View Project Repository</a>
+                    <a href="https://github.com/sharada-marasinha/weather_app.git">View Project Repository</a>
                 </div>
                 <span class="d-block p-3 ">A lightweight and responsive weather application built with HTML, CSS, and
                     JavaScript. Stay updated on current weather conditions worldwide. Includes a user-friendly
-                    interface, location search, and real-time weather data integration using a weather API.</span>
+                    interface, location search, and real-time weather data integration using a weather API.
+                    <a href="https://sharada-marasinha.github.io/weather_app/">View Deployment</a>
+                </span>
             </div>
         </div>
         <div class="d-flex text-body-secondary pt-3">
@@ -495,7 +497,7 @@
             <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
             <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">roller_dice_mobile_game</strong>
+                    <strong class="text-gray-dark">Roller_Dice Mobile Game</strong>
                     <a href="#">View Project Repository</a>
                 </div>
                 <span class="d-block p-3">A mobile game for Flutter that simulates rolling dice on your device. To roll
