--- a/index.html
+++ b/index.html
@@ -13,74 +13,6 @@
 </head>
 
 <body>
-
-    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-        <symbol id="check2" viewBox="0 0 16 16">
-            <path
-                d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
-        </symbol>
-        <symbol id="circle-half" viewBox="0 0 16 16">
-            <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
-        </symbol>
-        <symbol id="moon-stars-fill" viewBox="0 0 16 16">
-            <path
-                d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
-            <path
-                d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
-        </symbol>
-        <symbol id="sun-fill" viewBox="0 0 16 16">
-            <path
-                d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
-        </symbol>
-    </svg>
-
-    <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
-        <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button"
-            aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)">
-            <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
-                <use href="#circle-half"></use>
-            </svg>
-            <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
-            <li>
-                <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light"
-                    aria-pressed="false">
-                    <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                        <use href="#sun-fill"></use>
-                    </svg>
-                    Light
-                    <svg class="bi ms-auto d-none" width="1em" height="1em">
-                        <use href="#check2"></use>
-                    </svg>
-                </button>
-            </li>
-            <li>
-                <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark"
-                    aria-pressed="false">
-                    <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                        <use href="#moon-stars-fill"></use>
-                    </svg>
-                    Dark
-                    <svg class="bi ms-auto d-none" width="1em" height="1em">
-                        <use href="#check2"></use>
-                    </svg>
-                </button>
-            </li>
-            <li>
-                <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto"
-                    aria-pressed="true">
-                    <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                        <use href="#circle-half"></use>
-                    </svg>
-                    Auto
-                    <svg class="bi ms-auto d-none" width="1em" height="1em">
-                        <use href="#check2"></use>
-                    </svg>
-                </button>
-            </li>
-        </ul>
-    </div>
     <div class="container-fluid  bg-body-secondary ">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-body-tertiary">
             <a href="/"
@@ -101,35 +33,6 @@
         </header>
     </div>
     <hgroup>
-        <!-- <div class="bio">
-            <table width="100%">
-                <tr>
-                    <td><img width="300" id="propic" src="img/profile.png" alt="proimg"></td>
-                    <td>
-                        <dl>
-                            <dt>
-                                <h1>Hello.. I'm Sharadha Marasinghe</h1>
-                            </dt>
-                            <dd>
-                                <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                    Totam inventore magnam sint neque natus reprehenderit
-                                    voluptatem dolor et, temporibus provident amet debitis
-                                    deserunt laudantium similique voluptas minima beatae ab
-                                    eos.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Voluptate totam fugiat aperiam, dolor ducimus voluptatem
-                                    asperiores consectetur in quas officiis nihil id eaque, amet
-                                    nemo praesentium vitae, recusandae provident ad.
-                                </p>
-                            </dd>
-                        </dl>
-                    </td>
-                </tr>
-            </table>
-
-
-
-        </div> -->
         <div class="container-fluid p-5">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
                 <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -137,9 +40,11 @@
                     <p class="lead">a passionate software developer with 2 years of experience in the IT industry. I
                         love crafting clean and efficient code that brings innovative solutions to life. Let's build
                         something amazing together!</p>
+                        
+                        
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold"><i class="bi bi-whatsapp"></i></button>
+                        <button type="button" class="btn btn-outline-secondary btn-lg px-4"><i class="bi bi-envelope"></i></button>
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1   mb-5 text-center">
@@ -425,89 +330,92 @@
 
     <div class=" container  p-3 bg-body rounded shadow-sm">
         <h2 class="border-bottom pb-2 mb-0">Projects</h2>
-        <div class="d-flex text-body-secondary pt-3">
-            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
-            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Exam Platform</strong>
-                    <a href="#">View Project Repository</a>
-                </div>
-                <span class="d-block p-3">@username</span>
+<details>
+
+    <div class="d-flex text-body-secondary pt-3">
+        <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+        <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+            <div class="d-flex justify-content-between">
+                <strong class="text-gray-dark">Exam Platform</strong>
+                <a href="#">View Project Repository</a>
             </div>
+            <span class="d-block p-3">@username</span>
         </div>
-        <div class="d-flex text-body-secondary pt-3">
-            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
-            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Library-Management System</strong>
-                    <a href="#">View Project Repository</a>
-                </div>
-                <span class="d-block p-3">@username</span>
+    </div>
+    <div class="d-flex text-body-secondary pt-3">
+        <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+        <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+            <div class="d-flex justify-content-between">
+                <strong class="text-gray-dark">Library-Management System</strong>
+                <a href="#">View Project Repository</a>
             </div>
+            <span class="d-block p-3">@username</span>
         </div>
-        <div class="d-flex text-body-secondary pt-3">
-            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
-            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Real-Time Weather Web Application</strong>
-                    <a href="https://github.com/sharada-marasinha/weather_app.git">View Project Repository</a>
-                </div>
-                <span class="d-block p-3 ">A lightweight and responsive weather application built with HTML, CSS, and
-                    JavaScript. Stay updated on current weather conditions worldwide. Includes a user-friendly
-                    interface, location search, and real-time weather data integration using a weather API.
-                    <a href="https://sharada-marasinha.github.io/weather_app/">View Deployment</a>
-                </span>
+    </div>
+    <div class="d-flex text-body-secondary pt-3">
+        <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+        <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+            <div class="d-flex justify-content-between">
+                <strong class="text-gray-dark">Real-Time Weather Web Application</strong>
+                <a href="https://github.com/sharada-marasinha/weather_app.git">View Project Repository</a>
             </div>
+            <span class="d-block p-3 ">A lightweight and responsive weather application built with HTML, CSS, and
+                JavaScript. Stay updated on current weather conditions worldwide. Includes a user-friendly
+                interface, location search, and real-time weather data integration using a weather API.
+                <a href="https://sharada-marasinha.github.io/weather_app/">View Deployment</a>
+            </span>
         </div>
-        <div class="d-flex text-body-secondary pt-3">
-            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
-            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Quiz_App_Mobile</strong>
-                    <a href="#">View Project Repository</a>
-                </div>
-                <span class="d-block p-3">@username</span>
+    </div>
+    <div class="d-flex text-body-secondary pt-3">
+        <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+        <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+            <div class="d-flex justify-content-between">
+                <strong class="text-gray-dark">Quiz_App_Mobile</strong>
+                <a href="#">View Project Repository</a>
             </div>
+            <span class="d-block p-3">@username</span>
         </div>
-        <div class="d-flex text-body-secondary pt-3">
-            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
-            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">e-commerce Web Application </strong>
-                    <a href="#">View Project Repository</a>
-                </div>
-                <span class="d-block p-3">Led a software development team to create an advanced e-commerce website using
-                    Angular, Bootstrap, and Spring Boot. Utilized Agile methodologies for effective project management
-                    and GitHub for version control.</span>
+    </div>
+    <div class="d-flex text-body-secondary pt-3">
+        <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+        <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+            <div class="d-flex justify-content-between">
+                <strong class="text-gray-dark">e-commerce Web Application </strong>
+                <a href="#">View Project Repository</a>
             </div>
+            <span class="d-block p-3">Led a software development team to create an advanced e-commerce website using
+                Angular, Bootstrap, and Spring Boot. Utilized Agile methodologies for effective project management
+                and GitHub for version control.</span>
         </div>
-        <div class="d-flex text-body-secondary pt-3">
-            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
-            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Student Management System UNI</strong>
-                    <a href="#">View Project Repository</a>
-                </div>
-                <span class="d-block p-3">A web-based Student Information Management System was created using Spring
-                    Boot, Lombok, Spring Data, MySQL,Layade, and Fetch API,JavaScript, HTML, CSS to manage student data
-                    efficiently.</span>
+    </div>
+    <div class="d-flex text-body-secondary pt-3">
+        <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+        <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+            <div class="d-flex justify-content-between">
+                <strong class="text-gray-dark">Student Management System UNI</strong>
+                <a href="#">View Project Repository</a>
             </div>
+            <span class="d-block p-3">A web-based Student Information Management System was created using Spring
+                Boot, Lombok, Spring Data, MySQL,Layade, and Fetch API,JavaScript, HTML, CSS to manage student data
+                efficiently.</span>
         </div>
-        <div class="d-flex text-body-secondary pt-3">
-            <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
-            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Roller_Dice Mobile Game</strong>
-                    <a href="#">View Project Repository</a>
-                </div>
-                <span class="d-block p-3">A mobile game for Flutter that simulates rolling dice on your device. To roll
-                    the dice and see lifelike animations, shake or tap. Easy to learn, entertaining, and ideal for short
-                    games.</span>
+    </div>
+    <div class="d-flex text-body-secondary pt-3">
+        <img width="100" height="100" src="https://img.icons8.com/ios-filled/100/github.png" alt="github" />
+        <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+            <div class="d-flex justify-content-between">
+                <strong class="text-gray-dark">Roller_Dice Mobile Game</strong>
+                <a href="#">View Project Repository</a>
             </div>
+            <span class="d-block p-3">A mobile game for Flutter that simulates rolling dice on your device. To roll
+                the dice and see lifelike animations, shake or tap. Easy to learn, entertaining, and ideal for short
+                games.</span>
         </div>
-        <small class="d-block text-end mt-3">
-            <a href="#">All suggestions</a>
-        </small>
+    </div>
+    <small class="d-block text-end mt-3">
+        <a href="#">All suggestions</a>
+    </small>
+</details>
     </div>
     <!-- Contact From -->
     <div class="container col-xl-10 col-xxl-8 px-4 py-5">
@@ -546,19 +454,13 @@
                         <use xlink:href="#bootstrap" />
                     </svg>
                 </a>
-                <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 Company, Inc</span>
+                <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 sharada marasinha</span>
             </div>
 
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-                            <use xlink:href="#twitter" />
-                        </svg></a></li>
-                <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-                            <use xlink:href="#instagram" />
-                        </svg></a></li>
-                <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-                            <use xlink:href="#facebook" />
-                        </svg></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-linkedin"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-facebook"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-instagram"></i></a></li>
             </ul>
         </footer>
     </footer>
