--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <!-- <div class="col">
                 <div class="card text-center m-5">
                     <div class="card-header">
                         Recommendation
@@ -722,8 +722,8 @@
                         December 11, 2023, Frank was Sharada’s teacher
                     </div>
                 </div>
-            </div>
-            <div class="col">
+            </div> -->
+            <!-- <div class="col">
                 <div class="card text-center m-5">
                     <div class="card-header">
                         Recommendation
@@ -745,7 +745,7 @@
                         December 11, 2023, Frank was Sharada’s teacher
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
